[Media Controls] Only act as audio element when controls are enabled

This CL prevents video tags from acting as audio tags when the controls
are not enabled. This fixes a bug where video tags with only audio were
showing the audio controls background despite the controls being
hidden.

Bug: 843101
Change-Id: Ic7bb98b198a6ec7c497d233d40d673d7cfa7e44e
Reviewed-on: https://chromium-review.googlesource.com/1062225
Reviewed-by: Becca Hughes <beccahughes@chromium.org>
Commit-Queue: Tommy Steimel <steimel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559218}
Former-commit-id: 00c3cffbbeff11db315ac4d74bb274558a9f26d6