third_party/blink/renderer/modules/media_controls/media_controls_impl.cc
@@ -890,6 +890,7 @@ void MediaControlsImpl::MaybeShow() {
 
   timeline_->OnControlsShown();
   UpdateCSSClassFromState();
+  UpdateActingAsAudioControls();
 }
 
 void MediaControlsImpl::Hide() {
@@ -915,6 +916,7 @@ void MediaControlsImpl::Hide() {
   timeline_->OnControlsHidden();
 
   UpdateCSSClassFromState();
+  UpdateActingAsAudioControls();
 }
 
 bool MediaControlsImpl::IsVisible() const {
@@ -1630,13 +1632,7 @@ void MediaControlsImpl::OnLoadedMetadata() {
   // to be changed.
   Reset();
   UpdateCSSClassFromState();
-
-  if (ShouldActAsAudioControls() != is_acting_as_audio_controls_) {
-    if (is_acting_as_audio_controls_)
-      StopActingAsAudioControls();
-    else
-      StartActingAsAudioControls();
-  }
+  UpdateActingAsAudioControls();
 }
 
 void MediaControlsImpl::OnEnteredFullscreen() {
@@ -1856,8 +1852,9 @@ MediaControlsImpl::ToggleClosedCaptions() {
 bool MediaControlsImpl::ShouldActAsAudioControls() const {
   // A video element should act like an audio element when it has an audio track
   // but no video track.
-  return IsModern() && MediaElement().IsHTMLVideoElement() &&
-         MediaElement().HasAudio() && !MediaElement().HasVideo();
+  return IsModern() && MediaElement().ShouldShowControls() &&
+         MediaElement().IsHTMLVideoElement() && MediaElement().HasAudio() &&
+         !MediaElement().HasVideo();
 }
 
 void MediaControlsImpl::StartActingAsAudioControls() {
@@ -1878,6 +1875,15 @@ void MediaControlsImpl::StopActingAsAudioControls() {
   SetClass(kActAsAudioControlsCSSClass, false);
   PopulatePanel();
   Reset();
+}
+
+void MediaControlsImpl::UpdateActingAsAudioControls() {
+  if (ShouldActAsAudioControls() != is_acting_as_audio_controls_) {
+    if (is_acting_as_audio_controls_)
+      StopActingAsAudioControls();
+    else
+      StartActingAsAudioControls();
+  }
 }
 
 bool MediaControlsImpl::ShouldShowAudioControls() const {
